<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/tvage"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginBottom="42dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="37dp"
        android:text="@string/AgeOfUser"
        app:layout_constraintBottom_toBottomOf="@+id/etage"
        app:layout_constraintEnd_toStartOf="@+id/etage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etage"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginBottom="39dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/unit4height"
        app:layout_constraintEnd_toStartOf="@+id/unit4age"
        app:layout_constraintStart_toEndOf="@+id/tvage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/unit4age"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginEnd="59dp"
        android:layout_marginRight="59dp"
        android:layout_marginTop="37dp"
        android:text="@string/ageyears"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvheight"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginBottom="107dp"
        android:layout_marginTop="107dp"
        android:text="@string/HeightOfUser"
        app:layout_constraintBottom_toBottomOf="@+id/tvweight"
        app:layout_constraintEnd_toStartOf="@+id/etheight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etage" />

    <EditText
        android:id="@+id/etheight"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginBottom="28dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/etweight"
        app:layout_constraintEnd_toStartOf="@+id/unit4height"
        app:layout_constraintStart_toEndOf="@+id/tvheight"
        app:layout_constraintTop_toBottomOf="@+id/etage" />

    <TextView
        android:id="@+id/unit4height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="89dp"
        android:layout_marginTop="144dp"
        android:text="@string/heightunit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etheight"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/weightofuser"
        app:layout_constraintEnd_toStartOf="@+id/etweight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etheight" />

    <EditText
        android:id="@+id/etweight"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginBottom="180dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/cbtype1"
        app:layout_constraintEnd_toStartOf="@+id/unit4weight"
        app:layout_constraintStart_toEndOf="@+id/tvweight"
        app:layout_constraintTop_toBottomOf="@+id/unit4age" />

    <TextView
        android:id="@+id/unit4weight"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginBottom="184dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginTop="184dp"
        android:text="@string/weightunit"
        app:layout_constraintBottom_toTopOf="@+id/diagnoseq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etweight"
        app:layout_constraintTop_toBottomOf="@+id/tvage" />

    <TextView
        android:id="@+id/tvgender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/genderofuser"
        app:layout_constraintBottom_toTopOf="@+id/actlevels"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/cbmale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        app:layout_constraintBottom_toBottomOf="@+id/tvgender"
        app:layout_constraintEnd_toStartOf="@+id/etweight"
        app:layout_constraintStart_toStartOf="@+id/etweight" />

    <CheckBox
        android:id="@+id/cbfemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:text="@string/female"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner" />

    <TextView
        android:id="@+id/actlevels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="123dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/activity_level"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="207dp"
        android:layout_height="31dp"
        android:layout_marginBottom="54dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/diagnoseq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cbmale" />

    <TextView
        android:id="@+id/diagnoseq"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="31dp"
        android:text="@string/diseaserecord"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cbtype1"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/actlevels" />

    <CheckBox
        android:id="@+id/cbtype1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:text="@string/diabetes_type_i"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/diagnoseq" />

    <CheckBox
        android:id="@+id/cbtype2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/diabetes_type_ii"
        app:layout_constraintEnd_toEndOf="@+id/diagnoseq"
        app:layout_constraintTop_toBottomOf="@+id/diagnoseq" />
</android.support.constraint.ConstraintLayout>